# auto-exel

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-macos.yml  build-windows.yml
config/: default_settings.yaml  selectors.yaml  settings.yaml
docs/: MANUAL_ko.md
scripts/: build_release.bat  build_release.sh  diagnose_selectors.py
src/: exceptions.py
src/core/: browser_manager.py  excel_manager.py  order_automation.py  price_scraper.py  selector_helper.py  shopback_monitor.py  state_manager.py
src/models/: order.py  settings.py  state.py
src/ui/: empty_state.py  log_panel.py  main_window.py  onboarding_wizard.py  order_table_model.py  settings_dialog.py  theme.py
src/ui/widgets/: address_delegate.py  animated_button.py  cell_editor_delegate.py  excel_table.py  section_card.py  status_delegate.py
src/utils/: async_runner.py  logger.py  resource_path.py  retry.py  screenshot.py  validators.py
tests/unit/: test_excel_manager.py  test_order_model.py  test_selector_helper.py  test_state_manager.py  test_validators.py
